--- a/src/mechanical_turk/question_ui.html
+++ b/src/mechanical_turk/question_ui.html
@@ -287,6 +287,7 @@
                 }
             },
             mounted() {
+                // Credits: http://uniqueturker.myleott.com/
                 limit_reached = UTWorkerLimitReached(this.batch_id)
                 this.questionnaire_visible = !limit_reached
                 this.hit_limit_reached = limit_reached
